2003-11-03  Albert Chu  <chu11@llnl.gov>

	* configure.ac: Replaced --with-xs-prefix, --with-compat-prefix,
	and --with-gendersllnl-pm-prefix options with
	--with-perl-install-prefix option.

	* src/Libgendersllnl/Makefile.am, src/Gendersllnl/Makefile.am,
	compat/Makefile.am: Modified for above changes to configure.ac.

	* src/libgendersllnl/gendersllnl.c (genders_get_cluster,
	_getaltnodes, genders_isnode_or_altnode, genders_to_gendname,
	genders_to_gendname_preserve, genders_to_altname,
	genders_to_altname_preserve, _string_to): Fixed functions to
	return proper error code.

	* src/libgendersllnl/gendersllnl.c (genders_altnodelist_create,
	genders_altnodelist_clear, genders_altnodelist_destroy):
	Re-ordered error code return priorities.

	* src/libgendersllnl/gendersllnl.h,
	src/libgendersllnl/gendersllnl.c: Cleaned up code through files.

	* tagged gendersllnl-1-2-0-pre2
	
2003-09-26  Albert Chu  <chu11@llnl.gov>

	* compat/Hostlist.pm: Added $VERSION to avoid warnings.

2003-09-19  Albert Chu  <chu11@llnl.gov>

	* dist/dist2: Added error messages when genders files cannot be
	loaded.  Error messages were excluded before, because older
	genders implementions had error messages within the genders
	library.

2003-09-11  Albert Chu  <chu11@llnl.gov>

	* src/Gendersllnl/Gendersllnl.pm (new): 
	Removed unnecessary function call that can cause errors.
	
2003-09-11  Albert Chu  <chu11@llnl.gov>

	Modified build files

	* configure.ac: 
	Added output of gendersllnl.spec.
	Added call to AC_META.

	* gendersllnl.spec: Removed file.

	* gendersllnl.spec.in: New file, which replaces gendersllnl.spec.

	* config/ac_meta.m4: New file.

	* Removed all Makefile.in files and config files that will be
	generated by bootstrap from the repository.
	
2003-08-18  Albert Chu  <chu11@llnl.gov>

	* man/: Replaced "Release 1.0" with "August 2003" in all manpages.

2003-08-15  Albert Chu  <chu11@llnl.gov>

	* src/Gendersllnl/Gendersllnl.pm: Explicitly import the only