@@ -1,5 +1,5 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.5 2003-11-04 00:12:24 achu Exp $
+## $Id: Makefile.am,v 1.6 2003-11-07 19:28:18 achu Exp $
 ##*****************************************************************************
 ## Process this file with automake to produce Makefile.in.
 ##*****************************************************************************
@@ -32,7 +32,7 @@ install-data-local:
 	$(MAKE) -f Makefile.xs pure_install
 
 clean: 
-	$(MAKE) -f Makefile.xs clean
+	if test -a Makefile.xs; then $(MAKE) -f Makefile.xs clean; fi
 	rm -f Makefile.xs
 	rm -f Makefile.xs.old
 	rm -f gendersllnl.c
