@@ -1,3 +1,8 @@
+2003-11-07  Albert Chu  <chu11@llnl.gov>
+
+	* src/Libgendersllnl/Makefile.am, src/Gendersllnl/Makefile.am,
+	compat/Makefile.am: Fixed cleanup bug.
+
 2003-11-03  Albert Chu  <chu11@llnl.gov>
 
 	* configure.ac: Replaced --with-xs-prefix, --with-compat-prefix,
